RecoDev-DatasetPreparation-ContentBased-MultLabel/mozilla_firefox_new/nobody/847149.txt
We managed to have one build after bug 845247 was fixed but the system is down again.

  File "build/mozilla-central/config/printconfigsetting.py", line 19
    print("Section [{0}] not found.".format(section), file=sys.stderr)
                                                          ^
SyntaxError: invalid syntax
program finished with exit code 1

We managed to have one build after bug 845247 was fixed but the system is down again.

  File "build/mozilla-central/config/printconfigsetting.py", line 19
    print("Section [{0}] not found.".format(section), file=sys.stderr)
                                                          ^
SyntaxError: invalid syntax
program finished with exit code 1
Should be back up now, I had pushed a fix for this issue yesterday (not realizing it affected l10n as well)

http://hg.mozilla.org/mozilla-central/rev/edf9c64f821e

The bug that caused this (and where I backed out this one file) was in Bug 812179


No win32 l10n localized builds of Firefox available (printconfigsetting.py)

